--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "codepix-client",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "it bundles for the app",
   "scripts": {
     "prepublish": "npm test && npm run build",
     "test": "eslint src && flow check",
     "build": "rm -rf lib/* && npm run copy && gulp build",
-    "copy": "cp -R public lib/public"
+    "copy": "cp -R public lib/public",
+    "watch": "nodemon"
   },
   "files": [
     "lib",
