--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "eslint": "^1.10.3",
+    "eslint-plugin-flow-vars": "^0.1.3",
     "eslint-plugin-react": "^3.13.1",
     "flow-bin": "^0.20.1",
     "gulp": "^3.9.0",
