--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
   "author": "Matt McFarland",
   "license": "MIT",
   "dependencies": {
+    "highlight.js": "^9.0.0",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "superagent": "^1.6.1"
   }
 }
