--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
   "license": "MIT",
   "dependencies": {
     "highlight.js": "^9.0.0",
+    "history": "^1.17.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-router": "^1.0.3",
     "superagent": "^1.6.1"
   }
 }
