--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "history": "^1.17.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.3",
+    "react-router": "^2.0.0-rc4",
     "superagent": "^1.6.1"
   }
 }
