--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codepix-client",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "it bundles for the app",
   "scripts": {
     "prepublish": "npm test && npm run build",
@@ -52,7 +52,7 @@
     "history": "^1.17.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^2.0.0-rc4",
+    "react-router": "^1.0.3",
     "superagent": "^1.6.1"
   }
 }
