--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codepix-client",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "it bundles for the app",
   "scripts": {
     "prepublish": "npm test && npm run build",
@@ -50,6 +50,7 @@
   "dependencies": {
     "highlight.js": "^9.0.0",
     "history": "^1.17.0",
+    "moment": "^2.11.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.3",
