--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codepix-client",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "it bundles for the app",
   "scripts": {
     "prepublish": "npm test && npm run build",
@@ -48,12 +48,15 @@
   "author": "Matt McFarland",
   "license": "MIT",
   "dependencies": {
+    "classnames": "^2.2.1",
     "highlight.js": "^9.0.0",
     "history": "^1.17.0",
     "moment": "^2.11.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-input-autosize": "^0.6.6",
     "react-router": "^1.0.3",
+    "react-select": "^0.9.1",
     "superagent": "^1.6.1"
   }
 }
